Bueno rompí todo :D